tdf#159547 of-pie connector lines aren't quite geometrically correct

Fixed code computing the left endpoints of of-pie connector lines, so
that they're tangent to the circle when the composite slice is large enough
(and they terminate at the tangent point).

Change-Id: I4ff4d8e31f47259f0f48721b532dc245ede83003
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/167712
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>
Tested-by: Jenkins